# geopolitical_llm_bias

./: README.md  llm_QA.py  pyproject.toml  requirements.txt
data/: Historic_Data_ru.csv
docs/: index.html
docs/js/: main.js
notebooks/: analysis_of_probability.ipynb  language_change_analytics.ipynb
scripts/: debias.sh  mention_participant.sh  refuse_options.sh  swap_mention_participant.sh
